All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/ServiceMax_Processes__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object is used to define:
* ServiceMax modules
* ServiceMax SubModules
* Inventory Processes (standard and custom)
* Object Mappings for copying data between objects</description>
    <label>ServiceMax Process</label>
    <nameField>
        <displayFormat>PN-{0000000000}</displayFormat>
        <label>Process Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ServiceMax Processes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>