All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Action_URL__c.field-meta.xml
<CustomField>
    <fullName>Action_URL__c</fullName>
    <description>URL to be launched for the action</description>
    <inlineHelpText>URL to be launched for the action</inlineHelpText>
    <label>Action URL</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>