All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Advance_Expression__c.field-meta.xml
<CustomField>
    <fullName>Advance_Expression__c</fullName>
    <description>Internal use only</description>
    <label>Advance Expression</label>
    <length>255</length>
    <type>Text</type>
</CustomField>