All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Allow_Override__c.field-meta.xml
<CustomField>
    <fullName>Allow_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Override</label>
    <type>Checkbox</type>
</CustomField>