All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Allow_Partial_Delivery__c.field-meta.xml
<CustomField>
    <fullName>APL_Allow_Partial_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if partial delivery of received items is allowed in a process</description>
    <label>Allow Partial Delivery</label>
    <type>Checkbox</type>
</CustomField>