All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Allow_Partial_Shipment__c.field-meta.xml
<CustomField>
    <fullName>APL_Allow_Partial_Shipment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if partial shipment of items in a parts order is allowed</description>
    <label>Allow Partial Shipment</label>
    <type>Checkbox</type>
</CustomField>