All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Create_Supplier_RMA__c.field-meta.xml
<CustomField>
    <fullName>APL_Create_Supplier_RMA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether external RMAs should be created automatically when shipping to supplier locations or not</description>
    <label>Create Supplier RMA</label>
    <type>Checkbox</type>
</CustomField>