All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Create_WO_Preference__c.field-meta.xml
<CustomField>
    <fullName>APL_Create_WO_Preference__c</fullName>
    <label>APL_Create_WO_Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>APPLY_LINE_FIRST</fullName>
            </value>
            <value>
                <fullName>APPLY_ORDER_FIRST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>