All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Create_Work_Order_On__c.field-meta.xml
<CustomField>
    <fullName>APL_Create_Work_Order_On__c</fullName>
    <description>Indicates if/when work orders should be created automatically in a receipt process</description>
    <label>Create Work Order On</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RECEIPT</fullName>
            </value>
            <value>
                <fullName>DELIVERY</fullName>
            </value>
            <value>
                <fullName>NOT APPLICABLE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>