All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>APL_Field_Name__c</fullName>
    <description>Salesforce API name of the Location field in Case or Case Line that contains the return-to location. This is used when route calculation is disabled.</description>
    <label>Location Field Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>