All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Group_Work_Order_By__c.field-meta.xml
<CustomField>
    <fullName>APL_Group_Work_Order_By__c</fullName>
    <description>If work orders are created upon receipt, this flag indicates how the work orders should be grouped.</description>
    <label>Group Work Order By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ALL PRODUCTS</fullName>
            </value>
            <value>
                <fullName>ONE PRODUCT</fullName>
            </value>
            <value>
                <fullName>DELIVERY LOCATION</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>