All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Perform_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>APL_Perform_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if entitlement check should be performed in the Initiate Return process</description>
    <label>Perform Entitlement</label>
    <type>Checkbox</type>
</CustomField>