All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Perform_Route_Calculations__c.field-meta.xml
<CustomField>
    <fullName>APL_Perform_Route_Calculations__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if route should be calculated in the Initiate Return process</description>
    <label>Perform Route Calculations</label>
    <type>Checkbox</type>
</CustomField>