All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Print_Label_Template__c.field-meta.xml
<CustomField>
    <fullName>APL_Print_Label_Template__c</fullName>
    <description>Custom VisualForce page to use for printing shipment labels</description>
    <label>Print Label Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>