All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Route_Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>APL_Route_Rule_Type__c</fullName>
    <description>Type of routing rule</description>
    <label>Route Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>