All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Serial_Number_Source__c.field-meta.xml
<CustomField>
    <fullName>APL_Serial_Number_Source__c</fullName>
    <description>Indicates where the source serial numbers are available in a receipt/shipment transaction.</description>
    <label>Serial Number Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LINE_REF_IB</fullName>
            </value>
            <value>
                <fullName>LINE_TXT_SN</fullName>
            </value>
            <value>
                <fullName>STOCK</fullName>
            </value>
            <value>
                <fullName>NOT_APPLICABLE</fullName>
            </value>
            <value>
                <fullName>INTERACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>