All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/APL_Shipment_Note_Template__c.field-meta.xml
<CustomField>
    <fullName>APL_Shipment_Note_Template__c</fullName>
    <description>Custom VisualForce page to use to print shipment orders</description>
    <label>Shipment Note Template</label>
    <length>255</length>
    <type>Text</type>
</CustomField>