All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Assign_Case_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_Case_To__c</fullName>
    <label>Case Assign To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>