All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Assign_To_Queue__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Queue__c</fullName>
    <description>Internal use only</description>
    <label>Assign To Queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>