All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Assign_To_Technician__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Internal use only</description>
    <label>Assign To Technician</label>
    <referenceTo>Service_Group_Members__c</referenceTo>
    <relationshipLabel>Dispatch Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>