All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Assign_Work_Order_To__c.field-meta.xml
<CustomField>
    <fullName>Assign_Work_Order_To__c</fullName>
    <description>Internal use only</description>
    <label>Assign Work Order To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Technician</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
            <value>
                <fullName>Primary Technician</fullName>
            </value>
            <value>
                <fullName>Team</fullName>
            </value>
            <value>
                <fullName>Dispatcher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>