All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Calendar_Start_Type__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Start_Type__c</fullName>
    <description>Internal use only</description>
    <label>Calendar Start Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Next Day</fullName>
            </value>
            <value>
                <fullName>Same Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>