All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Capture_Log__c.field-meta.xml
<CustomField>
    <fullName>Capture_Log__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Capture Log</label>
    <type>Checkbox</type>
</CustomField>