All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Case_Assign_To_User__c.field-meta.xml
<CustomField>
    <fullName>Case_Assign_To_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Assign To User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ServiceMax_Processes1</relationshipName>
    <type>Lookup</type>
</CustomField>