All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Child_Error_Msg2__c.field-meta.xml
<CustomField>
    <fullName>Child_Error_Msg2__c</fullName>
    <description>Error message to be displayed when the line records do not match the second criteria.</description>
    <label>Child Error Msg2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>