All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Child_Error_Msg__c.field-meta.xml
<CustomField>
    <fullName>Child_Error_Msg__c</fullName>
    <description>Child Error Msg</description>
    <inlineHelpText>Child Error Msg</inlineHelpText>
    <label>Child Error Msg</label>
    <length>255</length>
    <type>Text</type>
</CustomField>