All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Child_Object_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Child_Object_Criteria__c</fullName>
    <description>WHERE clause of the child selection criteria, Overloaded to save the where class build for incremental run.</description>
    <label>Child Object Criteria</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>