All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Consider_Location_From__c.field-meta.xml
<CustomField>
    <fullName>Consider_Location_From__c</fullName>
    <label>Consider Location From</label>
    <length>100</length>
    <type>Text</type>
</CustomField>