All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Counter_Vs_Dates_Rule__c.field-meta.xml
<CustomField>
    <fullName>Counter_Vs_Dates_Rule__c</fullName>
    <description>Internal use only</description>
    <label>Counter Vs Dates Rule</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Whichever Is Valid</fullName>
            </value>
            <value>
                <fullName>Both Are Valid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>