All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Create_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Create_Work_Order__c</fullName>
    <label>Create Work Order</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>One Per Product</fullName>
            </value>
            <value>
                <fullName>One Per Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>