All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Custom_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Custom_Action_Type__c</fullName>
    <label>Custom Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Web-Service</fullName>
            </value>
            <value>
                <fullName>App-to-App</fullName>
            </value>
            <value>
                <fullName>Mobile-Activity-Space</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>