All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Default_Location__c.field-meta.xml
<CustomField>
    <fullName>Default_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Default delivery location for products that do not match any delivery criteria</description>
    <label>Default Location</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>ServiceMax Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>