All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Default_Lookup_Column__c.field-meta.xml
<CustomField>
    <fullName>Default_Lookup_Column__c</fullName>
    <label>Default Lookup Column</label>
    <length>150</length>
    <type>Text</type>
</CustomField>