All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Default_On__c.field-meta.xml
<CustomField>
    <fullName>Default_On__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default On</label>
    <type>Checkbox</type>
</CustomField>