All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <description>Default value for a setting, this value should be one of the value in Values fields. Overloaded to save the advance expression for incremental run.</description>
    <inlineHelpText>Default value for a setting, this value should be one of the value in Values fields.</inlineHelpText>
    <label>Default Value</label>
    <type>TextArea</type>
</CustomField>