All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Process Description</description>
    <inlineHelpText>Enter a detailed description of this process.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>