All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Dispatch_Process_Status__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Process_Status__c</fullName>
    <description>Internal use only</description>
    <label>Dispatch Process Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>