All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Dispatch_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Threshold__c</fullName>
    <description>Lead time for continuous optimization</description>
    <label>Dispatch Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>