All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Distance_And_Time__c.field-meta.xml
<CustomField>
    <fullName>Distance_And_Time__c</fullName>
    <description>Internal use only</description>
    <label>Distance And Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actual Distance And Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>