All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Doc_Template_Details__c.field-meta.xml
<CustomField>
    <fullName>Doc_Template_Details__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Doc Template Details</label>
    <referenceTo>Doc_Template_Details__c</referenceTo>
    <relationshipLabel>ServiceMax Processes</relationshipLabel>
    <relationshipName>ServiceMax_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>