All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Email_On_Error__c.field-meta.xml
<CustomField>
    <fullName>Email_On_Error__c</fullName>
    <description>Internal use only</description>
    <label>Email On Error</label>
    <type>Email</type>
</CustomField>