All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Enable_Attachment__c.field-meta.xml
<CustomField>
    <fullName>Enable_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Attachment</label>
    <type>Checkbox</type>
</CustomField>