All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Enable_Child_Line_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Enable_Child_Line_Entitlement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Child Line Entitlement</label>
    <type>Checkbox</type>
</CustomField>