All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Enable_Confirmation_Dialog__c.field-meta.xml
<CustomField>
    <fullName>Enable_Confirmation_Dialog__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Confirmation Dialog</label>
    <type>Checkbox</type>
</CustomField>