All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Entitlement_By__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_By__c</fullName>
    <description>Internal use only</description>
    <label>Entitlement By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Validity dates</fullName>
            </value>
            <value>
                <fullName>Counters</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>