All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Entitlement_Scope__c.field-meta.xml
<CustomField>
    <fullName>Entitlement_Scope__c</fullName>
    <description>Internal use only</description>
    <label>Entitlement Scope</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Warranties</fullName>
            </value>
            <value>
                <fullName>Service Contracts</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>