All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Expertise_Match_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Expertise_Match_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enabling/setting this field to true initiates data sync in iPad mobile after completing custom action web service call.</description>
    <label>Expertise Match Enabled</label>
    <type>Checkbox</type>
</CustomField>