All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Export_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Export_Configuration__c</fullName>
    <label>Export Configuration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>