All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Full_Run_Unit__c.field-meta.xml
<CustomField>
    <fullName>Full_Run_Unit__c</fullName>
    <label>Full Run Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
                <default>true</default>
                <label>Days</label>
            </value>
            <value>
                <fullName>Hours</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>