All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Include_Parent__c.field-meta.xml
<CustomField>
    <fullName>Include_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use only</description>
    <label>Include Parent Product</label>
    <type>Checkbox</type>
</CustomField>