All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/Include_Product__c.field-meta.xml
<CustomField>
    <fullName>Include_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Internal use only</description>
    <label>Include Product</label>
    <type>Checkbox</type>
</CustomField>