All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/IsDefault__c.field-meta.xml
<CustomField>
    <fullName>IsDefault__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Default?</label>
    <type>Checkbox</type>
</CustomField>