All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate that the setting is for internal use by ServiceMax.</description>
    <inlineHelpText>Flag to indicate that the setting is for internal use by ServiceMax.</inlineHelpText>
    <label>Is Private?</label>
    <type>Checkbox</type>
</CustomField>