All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/IsStandalone__c.field-meta.xml
<CustomField>
    <fullName>IsStandalone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>DO NOT USE. This field has been discontinued. Refer to Purpose__c</description>
    <inlineHelpText>DO NOT USE. This field has been discontinued. Refer to Purpose__c</inlineHelpText>
    <label>Is Standalone (Do Not Use)</label>
    <type>Checkbox</type>
</CustomField>