All_Component_DX/force-app/main/default/objects/ServiceMax_Processes__c/fields/IsStandard__c.field-meta.xml
<CustomField>
    <fullName>IsStandard__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if the process is a standard ServiceMax process.</description>
    <inlineHelpText>Flag to indicate if the process is a standard ServiceMax process.</inlineHelpText>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>